--- a/index.html
+++ b/index.html
@@ -93,7 +93,16 @@
     <div id="content-container">
         <!-- El contenido se generará dinámicamente -->
     </div>
-
+   <div class="">Memory Warrior</div>
+ <pre>
+         _____
+       /       \
+     /   @   @   \
+    (             )
+     \   \___/   /
+       \_______/
+    </pre>
+    
     <script>
         const data = {
             'wester': {
