--- a/index.html
+++ b/index.html
@@ -147,13 +147,17 @@
             },
             'Sarah Morgan': {
                 title: 'Sarah Morgan',
-                notes: ["Sobre Sarah Morgan","Sarah Morgan es la asistente de la Doctora Alicia Scott y una pieza clave en la investigación del mundo del alma. Con una formación en neurociencia y psicología, Sarah es tanto la mano derecha de la doctora como su confidente más cercana.", "Historia Personal","Sarah se unió a Neura con la esperanza de realizar investigaciones significativas en el campo de la neurociencia. Sin embargo, rápidamente se dio cuenta de las prácticas éticamente cuestionables de la corporación. Su lealtad a la Doctora Scott y su deseo de hacer el bien la mantienen firme en su posición, trabajando desde dentro para hacer una diferencia."]
+                notes: ["Sobre Sarah Morgan","Sarah Morgan es la asistente de la Doctora Alicia Scott y una pieza clave en la investigación de Material Soul y FallNeural. Con una formación en neurociencia y psicología, Sarah es tanto la mano derecha de la doctora como su confidente más cercana.", "Historia Personal","Sarah se unió a Neura con la esperanza de realizar investigaciones significativas en el campo de la neurociencia. Sin embargo, rápidamente se dio cuenta de las prácticas éticamente cuestionables de la corporación. Su lealtad a la Doctora Scott y su deseo de hacer el bien la mantienen firme en su posición, trabajando desde dentro para hacer una diferencia."]
+            },
+            'FallNeural': {
+                title: 'Proyecto Fall de la Corporación Neural',
+                notes: ["Es el proyecto insignea de la Corporación Neural que buscar encontrar sujetos que soporten la tensión qué genera el proceso de conección cerebral, es decir el flujo de datos de cerebro a cerebro, estos datos llamados Neuraqubit.","Este proyecto está restringido al publico ya qué sus investigaciones aún no han terminado y no han encontrado al sujeto qué pueda soportar los Neuraqubits.", "Historia del Proyecto","Dados los avances en materia cuantica los cientificos han conseguido decifrar una parte fundamental del cerebro y todo el cuerpo humano, han descubierto qué el cerebro solo es un codificador y un decodificador, el más complejo del mundo, esto abrió la puerta a una investigación profunda qué lleva años de investigación, ¿se puede conocer el alma de una persona? el proyecto ha tenido muchas criticas por filtraciones de acciones poco eticas para llevar a cabo sus experimentos."]
             },
             'Doctora Alicia Scott': {
                 title: 'Doctora Alicia Scott',
                 notes: ["Información Clave",
 
-"La Doctora Alicia Scott es una psicóloga reconocida y la principal investigadora en el proyecto del mundo del alma. Con una dedicación inquebrantable a su trabajo, ha logrado avances significativos en la comprensión de los procesos mentales y emocionales." ,
+"La Doctora Alicia Scott es una Neurocientifica y graduada con honores de la Academia de ciencias cuanticas y especializada en neurocuantica y psicólogia muy reconocida y la principal investigadora en el proyecto del FallNeura. Con una dedicación inquebrantable a su trabajo, ha logrado avances significativos en la comprensión de los procesos mentales y emocionales." ,
 
 "Diario Personal",
 "Fecha 12 de marzo de 2022",
@@ -262,7 +266,7 @@
         window.onload = function() {
             generateMenu();
             generateContent();
-            showContent('wester');  // Mostrar el contenido de 'wester' al cargar la página
+            showContent('Doctora Alicia Scott');  // Mostrar el contenido de 'wester' al cargar la página
         };
 
         document.getElementById('search-box').addEventListener('input', filterMenu);
