--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             },
             'Doctora Alicia Scott': {
                 title: 'Doctora Alicia Scott',
-                notes: ["Información Clave",
+                notes: ["Alicia Scott","Bienvenid@ a mi bitacora aquí podrás consultar toda la información para entender mejor algunos detalles","Información Clave",
 
 "La Doctora Alicia Scott es una Neurocientifica y graduada con honores de la Academia de ciencias cuanticas y especializada en neurocuantica y psicólogia muy reconocida y la principal investigadora en el proyecto del FallNeura. Con una dedicación inquebrantable a su trabajo, ha logrado avances significativos en la comprensión de los procesos mentales y emocionales." ,
 
