--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         nav a:hover {
             text-shadow: 0 0 5px #00ff00;
         }
+        .contt {
+        width: 100%;
+        }
         .content {
             display: none;
             margin-top: 20px;
@@ -79,6 +82,8 @@
     </style>
 </head>
 <body>
+<div class="content">
+    
      <pre>
 ░░░░░░░░▄██▄░░░░░░▄▄░░
 ░░░░░░░▐███▀░░░░░▄███▌
@@ -95,6 +100,8 @@
 
     </pre>
     <div class="lcd-title">Bitácora de la Doctora Alicia Scott</div>
+</div>
+    
     <div class="">Pistas y notas importantes...</div>
     <div class="search-container">
         <input type="text" class="search-box" id="search-box" placeholder="Buscar...">
