--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         "Nombre: Ethan Brown", "Condición: Esquizofrenia hebefrénica.", "Antecedentes: Diagnosticado a los 17 años, ha tenido dificultades para mantener relaciones sociales y académicas.",
         "Nombre: Grace Wilson", "Condición: Trastorno obsesivo-compulsivo severo con alucinaciones.", "Antecedentes: Perfeccionista extremo, sus síntomas empeoraron después de la muerte de su madre.",
         "Nombre: Oliver Martinez", "Condición: Esquizofrenia residual.", "Antecedentes: Sus síntomas principales han disminuido, pero aún experimenta pensamientos delirantes.",
-        "Nombre: Emily Johnson", "Condición: Mutismo selectivo, mirada perdida.", "Antecedentes: Experiencia traumática no revelada, posible abuso o negligencia.",
+        "Nombre: Emily Johnson", "Condición: Mutismo selectivo, mirada perdida.", "Antecedentes: Niña de 10 años, sus habilidades se centran en la musica y el arte, su madre se separó de su padre, Experiencia traumática no revelada, posible abuso o negligencia.",
         "Nombre: Isabella Harris", "Condición: Trastorno de ansiedad generalizada con episodios psicóticos.", "Antecedentes: Ha lidiado con la ansiedad toda su vida, y la presión laboral desencadenó episodios psicóticos.",
         "Nombre: Daniel Clark", "Condición: Esquizofrenia paranoide.", "Antecedentes: Ex-soldado, sus síntomas comenzaron después de regresar de la guerra.",
         "Nombre: Olivia White", "Condición: Trastorno bipolar con síntomas psicóticos.", "Antecedentes: Diagnosticada a los 18 años, ha tenido varios episodios maníacos y depresivos.",
