--- a/index.html
+++ b/index.html
@@ -129,15 +129,14 @@
 "Prisión Wester", 
 "Fundación", 
 
-"La Prisión Wester fue fundada en 1965, inicialmente como una instalación de máxima seguridad destinada a albergar a los criminales más peligrosos del estado. Con el tiempo, se convirtió en un lugar donde las fronteras entre la justicia y la ciencia comenzaron a desdibujarse." , 
-
+"La Prisión Wester fue fundada en 1965, inicialmente como una instalación de máxima seguridad destinada a albergar a los criminales más peligrosos del estado.",
+"Con el tiempo, se convirtió en un lugar donde las fronteras entre la justicia y la ciencia comenzaron a desdibujarse." , 
 "Secretos Oscuros",
-
-"Desde su fundación, la Prisión Wester ha sido el epicentro de numerosos rumores y escándalos. En la década de 1990, surgieron acusaciones de experimentos ilegales realizados en los prisioneros. Estos experimentos eran dirigidos por la Corporación Neura, una entidad que operaba bajo el pretexto de desarrollar nuevas técnicas de rehabilitación psicológica. Sin embargo, las verdaderas intenciones eran mucho más siniestras.",
-
+"Desde su fundación, la Prisión Wester ha sido el epicentro de numerosos rumores y escándalos.",
+"En la década de 1990, surgieron acusaciones de experimentos ilegales realizados en los prisioneros.",
+"Estos experimentos eran dirigidos por la Corporación Neura, una entidad que operaba bajo el pretexto de desarrollar nuevas técnicas de rehabilitación psicológica. Sin embargo, las verdaderas intenciones eran mucho más siniestras.",
 "Desapariciones",
-
-"A lo largo de los años, al menos 50 prisioneros han desaparecido sin dejar rastro. Los registros oficiales sugieren transferencias a otras instalaciones o muertes accidentales, pero los rumores hablan de experimentos que fueron mal y resultaron en desapariciones forzadas para encubrir los fracasos. Los prisioneros desaparecidos a menudo eran seleccionados por sus antecedentes psiquiátricos, haciéndolos sujetos ideales para los experimentos de Neura."
+"A lo largo de los años, al menos 50 prisioneros han desaparecido sin dejar rastro.","Los registros oficiales sugieren transferencias a otras instalaciones o muertes accidentales, pero los rumores hablan de experimentos que fueron mal y resultaron en desapariciones forzadas para encubrir los fracasos.","Los prisioneros desaparecidos a menudo eran seleccionados por sus antecedentes psiquiátricos, haciéndolos sujetos ideales para los experimentos de Neura."
 
 ]
             },
@@ -147,7 +146,7 @@
             },
             'Nick Ashford': {
                 title: 'Nick Ashford',
-                notes: ["Información sobre Nick Ashford", "Nick Ashford fue uno de los sujetos más prominentes en los experimentos de Neura. A diferencia de muchos prisioneros, Nick fue seleccionado no por sus antecedentes criminales (no se sabe sobre sus antecedentes, se rumorea qué fue incriminado injustamente por Neura), sino por su excepcional resistencia mental y capacidad de recuperación emocional. A través de los experimentos, Nick desarrolló la habilidad de entrar en el 'mundo del alma', un plano mental donde puede interactuar con las psiques de otros.","Historia Personal","Antes de ser seleccionado por Neura, Nick era un joven brillante con un futuro prometedor en la psicología y ciencia de la computación Neurocuantica. Su participación en los experimentos de Neura comenzó cuando aceptó un puesto de investigación que rápidamente se convirtió en una pesadilla. Las pruebas constantes y la manipulación mental lo dejaron con cicatrices profundas, pero también con una fuerza interior que le permite luchar contra las oscuridades del alma.","En el alma se ve con vendas en el cuerpo, las cuales son ataduras qué lo limitan."]
+                notes: ["Información sobre Nick Ashford", "Nick Ashford fue uno de los sujetos más prominentes en los experimentos de Neura."," A diferencia de muchos prisioneros, Nick fue seleccionado no por sus antecedentes criminales (no se sabe sobre sus antecedentes, se rumorea qué fue incriminado injustamente por Neura), sino por su excepcional resistencia mental y capacidad de recuperación emocional. A través de los experimentos, Nick desarrolló la habilidad de entrar en el 'mundo del alma', un plano mental donde puede interactuar con las psiques de otros.","Historia Personal","Antes de ser seleccionado por Neura, Nick era un joven brillante con un futuro prometedor en la psicología y ciencia de la computación Neurocuantica. Su participación en los experimentos de Neura comenzó cuando aceptó un puesto de investigación que rápidamente se convirtió en una pesadilla. Las pruebas constantes y la manipulación mental lo dejaron con cicatrices profundas, pero también con una fuerza interior que le permite luchar contra las oscuridades del alma.","En el alma se ve con vendas en el cuerpo, las cuales son ataduras qué lo limitan."]
             },
             'Sarah Morgan': {
                 title: 'Sarah Morgan',
@@ -189,16 +188,16 @@
 "La Doctora Alicia Scott es una Neurocientifica y graduada con honores de la Academia de ciencias cuanticas y especializada en neurocuantica y psicólogia muy reconocida y la principal investigadora en el proyecto del FallNeura. Con una dedicación inquebrantable a su trabajo, ha logrado avances significativos en la comprensión de los procesos mentales y emocionales." ,
 
 "Diario Personal",
-"Fecha 12 de marzo de 2022",
+"Fecha: 12 de marzo de 2022",
 "Hoy he vuelto a revisar los registros de los pacientes de Wester. Cada archivo, cada historia es una pieza de un rompecabezas más grande. No puedo evitar sentir una profunda conexión con ellos, especialmente con Nick. Su capacidad para navegar en el mundo del alma es fascinante y perturbadora a la vez. Cada día me pregunto si estamos haciendo lo correcto, si realmente estamos ayudando a estas personas o si simplemente estamos jugando a ser dioses.",
-"Fecha 25 de abril de 2022",
+"Fecha: 25 de abril de 2022",
 "Sarah es un apoyo inestimable. Su inteligencia y su moralidad la hacen única en un lugar como Neura. A veces, me pregunto cómo hemos llegado hasta aquí, en este lugar donde la ética es una moneda de cambio. Me reconforta saber que no estoy sola en esta lucha por descubrir la verdad y usar nuestros conocimientos para el bien.",
-"Fecha 15 de junio de 2022",
+"Fecha: 15 de junio de 2022",
 "Hoy, otro prisionero ha desaparecido. Los informes oficiales son vagos y contradictorios. La oscuridad que envuelve a la Prisión Wester se vuelve cada vez más densa. Tengo que mantenerme fuerte, por Nick, por Sarah, por todos los que no pueden luchar por sí mismos. La verdad debe salir a la luz, cueste lo que cueste."]
             },
             'Material Soul': {
                 title: 'Material Soul',
-                notes: ["Proyecto Secreto","El 'Proyecto Material Soul' es una iniciativa ultrasecreta de la Doctora Alicia Scott. Su objetivo es materializar y visualizar el alma humana utilizando la avanzada tecnología de computación cuaternaria, conocida como Neuroqubits. Este proyecto busca lo imposible: compilar y mostrar datos del alma en computadoras de 1 bit. Hasta ahora, esto ha sido considerado inalcanzable. Sin embargo, con la ayuda de Nick, se ha logrado recopilar información invaluable sobre sus experiencias en los misteriosos mundos Soul."]          
+                notes: ["Proyecto Secreto","El 'Proyecto Material Soul' es una iniciativa ultrasecreta de la Doctora Alicia Scott."," Su objetivo es materializar y visualizar el alma humana utilizando la avanzada tecnología de computación cuaternaria, conocida como Neuroqubits.","Este proyecto busca lo imposible: compilar y mostrar datos del alma en computadoras de 1 bit. Hasta ahora, esto ha sido considerado inalcanzable. Sin embargo, con la ayuda de Nick, se ha logrado recopilar información invaluable sobre sus experiencias en los misteriosos mundos Soul."]          
             },
             'Lista de pacientes': {
     title: 'Lista de pacientes',
