--- a/index.html
+++ b/index.html
@@ -254,85 +254,21 @@
         "Prisionero 22: Linda Scott", "Culpable de: Uso indebido de fondos públicos.",
         "Prisionero 23: Steven Green", "Culpable de: Fraude en la venta de vehículos.",
         "Prisionero 24: Susan Adams", "Culpable de: Robo en una joyería.",
-        "Prisionero 25: Joseph Baker", "Culpable de: Uso de documentos falsificados.",
+        "Prisionero 25: Joseph Baker", "Culpable de: Uso de documentos falsificados y Negligencia.","culpado por Neural y por su participación en un experimento qué causó la muerte de un hombre",
         "Prisionero 26: Lisa Gonzalez", "Culpable de: Violación de la ley de inmigración.",
         "Prisionero 27: Kevin Perez", "Culpable de: Posesión de armas sin licencia.",
         "Prisionero 28: Sandra Carter", "Culpable de: Fraude en seguros médicos.",
         "Prisionero 29: Brian Mitchell", "Culpable de: Robo en un almacén.",
         "Prisionero 30: Angela Roberts", "Culpable de: Uso indebido de fondos caritativos.",
         "Tipo II:",
-        "Prisionero 31:", "Información No disponible",
-        "Prisionero 32:", "Información No disponible",
-        "Prisionero 33:", "Información No disponible",
-        "Prisionero 34:", "Información No disponible",
-        "Prisionero 35:", "Información No disponible",
-        "Prisionero 36:", "Información No disponible",
-        "Prisionero 37:", "Información No disponible",
-        "Prisionero 38:", "Información No disponible",
-        "Prisionero 39:", "Información No disponible",
-        "Prisionero 40:", "Información No disponible",
-        "Prisionero 41:", "Información No disponible",
-        "Prisionero 42:", "Información No disponible",
-        "Prisionero 43:", "Información No disponible",
-        "Prisionero 44:", "Información No disponible",
-        "Prisionero 45:", "Información No disponible",
+       "INFORMACIÓNENCRIPTADAXFGJELSDKSDKASDJLASD",
+        "Información No disponible",
         "Tipo III:",
-        "Prisionero 46:", "Información No disponible",
-        "Prisionero 47:", "Información No disponible",
-        "Prisionero 48:", "Información No disponible",
-        "Prisionero 49:", "Información No disponible",
-        "Prisionero 50:", "Información No disponible",
-        "Prisionero 51:", "Información No disponible",
-        "Prisionero 52:", "Información No disponible",
-        "Prisionero 53:", "Información No disponible",
-        "Prisionero 54:", "Información No disponible",
-        "Prisionero 55:", "Información No disponible",
-        "Prisionero 56:", "Información No disponible",
-        "Prisionero 57:", "Información No disponible",
-        "Prisionero 58:", "Información No disponible",
-        "Prisionero 59:", "Información No disponible",
-        "Prisionero 60:", "Información No disponible",
-        "Prisionero 61:", "Información No disponible",
-        "Prisionero 62:", "Información No disponible",
-        "Prisionero 63:", "Información No disponible",
-        "Prisionero 64:", "Información No disponible",
-        "Prisionero 65:", "Información No disponible",
-        "Prisionero 66:", "Información No disponible",
-        "Prisionero 67:", "Información No disponible",
+       "INFORMACIÓNENCRIPTADAXFGJELSDKSDKASDJLASD",
+        "Información No disponible",
         "Tipo IV:",
-        "Prisionero 68:", "Información No disponible",
-        "Prisionero 69:", "Información No disponible",
-        "Prisionero 70:", "Información No disponible",
-        "Prisionero 71:", "Información No disponible",
-        "Prisionero 72:", "Información No disponible",
-        "Prisionero 73:", "Información No disponible",
-        "Prisionero 74:", "Información No disponible",
-        "Prisionero 75:", "Información No disponible",
-        "Prisionero 76:", "Información No disponible",
-        "Prisionero 77:", "Información No disponible",
-        "Prisionero 78:", "Información No disponible",
-        "Prisionero 79:", "Información No disponible",
-        "Prisionero 80:", "Información No disponible",
-        "Prisionero 81:", "Información No disponible",
-        "Prisionero 82:", "Información No disponible",
-        "Prisionero 83:", "Información No disponible",
-        "Prisionero 84:", "Información No disponible",
-        "Prisionero 85:", "Información No disponible",
-        "Prisionero 86:", "Información No disponible",
-        "Prisionero 87:", "Información No disponible",
-        "Prisionero 88:", "Información No disponible",
-        "Prisionero 89:", "Información No disponible",
-        "Prisionero 90:", "Información No disponible",
-        "Prisionero 91:", "Información No disponible",
-        "Prisionero 92:", "Información No disponible",
-        "Prisionero 93:", "Información No disponible",
-        "Prisionero 94:", "Información No disponible",
-        "Prisionero 95:", "Información No disponible",
-        "Prisionero 96:", "Información No disponible",
-        "Prisionero 97:", "Información No disponible",
-        "Prisionero 98:", "Información No disponible",
-        "Prisionero 99:", "Información No disponible",
-        "Prisionero 100:", "Información No disponible"
+        "INFORMACIÓNENCRIPTADAFGJSDKSDKASDJLASD",
+      "Información No disponible"
     ]
 }
         };
