--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es">https://github.com/KevinsK7/Bitacora.github.io/blob/main/index.html
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -235,7 +235,7 @@
         "Prisionero 3: Robert Johnson", "Culpable de: Vandalismo en propiedad pública.",
         "Prisionero 4: Emily Davis", "Culpable de: Conducción bajo la influencia del alcohol.",
         "Prisionero 5: Michael Brown", "Culpable de: Hurto en una tienda de ropa.",
-        "Prisionero 6: Sarah Wilson", "Culpable de: Violación de propiedad privada.",
+        "Prisionero 6: Ruth Wilson", "Culpable de: Violación de propiedad privada.",
         "Prisionero 7: David Miller", "Culpable de: Posesión de drogas para uso personal.",
         "Prisionero 8: Laura Moore", "Culpable de: Fraude con tarjetas de crédito.",
         "Prisionero 9: James Taylor", "Culpable de: Agresión en una pelea de bar.",
