--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@
         "Prisionero 3: Robert Johnson", "Culpable de: Vandalismo en propiedad pública.",
         "Prisionero 4: Emily Davis", "Culpable de: Conducción bajo la influencia del alcohol.",
         "Prisionero 5: Michael Brown", "Culpable de: Hurto en una tienda de ropa.",
-        "Prisionero 6: Ruth Wilson", "Culpable de: Violación de propiedad privada.",
+        "Prisionero 6: Ruth Wilson", "Culpable de: Violación de propiedad privada.", "Desaparecida: ultima ves vista en un paradero de autobus",
         "Prisionero 7: David Miller", "Culpable de: Posesión de drogas para uso personal.",
         "Prisionero 8: Laura Moore", "Culpable de: Fraude con tarjetas de crédito.",
         "Prisionero 9: James Taylor", "Culpable de: Agresión en una pelea de bar.",
-        "Prisionero 10: Olivia Anderson", "Culpable de: Robo de identidad.",
+        "Prisionero 10: Olivia Anderson", "Culpable de: Robo de identidad.", "Desaparecida: ultima ves vista en una cabaña a las afueras de la ciudad",
         "Prisionero 11: Chris Thomas", "Culpable de: Violación de la ley de propiedad intelectual.",
         "Prisionero 12: Mary Jackson", "Culpable de: Robo en un supermercado.",
         "Prisionero 13: John White", "Culpable de: Conducción temeraria.",
