--- a/index.html
+++ b/index.html
@@ -118,6 +118,41 @@
 ░░░░░░░░░░░░░░▀▀███░▀▀▀░░░░░░░░░░░░░░░░░░░░░░░░
 ░░░░░░░░░ GRUPO PANDA ░░░░░░░░░░░░░░░░░░░░░░░░░
 
+
+
+
+                                      ████                                
+                                    ████▒▒██                                
+                                  ████  ▒▒██                                
+                                ██▒▒  ▒▒▒▒▒▒██                              
+                              ██▒▒██        ██                              
+  ████                      ██▒▒██          ██                              
+██▒▒▒▒██████                ██▒▒██      ▒▒  ████                            
+██▒▒▒▒██    ████      ██████▒▒▒▒▒▒██    ▒▒▒▒██████████████                  
+██▒▒    ████▒▒▒▒██████▒▒▒▒▒▒▒▒▒▒▒▒▒▒██▒▒▒▒▒▒██▒▒▒▒▒▒▒▒▒▒▒▒████              
+██▒▒▒▒      ██▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██▒▒██▒▒▒▒▒▒▒▒▒▒▒▒▒▒██            
+  ██▒▒      ██▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██▒▒██▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒████        
+  ██        ██▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██      
+  ██▒▒    ██▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██    
+  ██▒▒▒▒  ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒  ██▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██    
+    ██▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒    ██▒▒▒▒▒▒▒▒▒▒████▒▒▒▒▒▒▒▒██  
+    ████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██      ██▒▒▒▒▒▒████▒▒▒▒▒▒▒▒▒▒▒▒██  
+    ██▒▒██▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██        ██▒▒▒▒██▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██  
+      ██▒▒██▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██        ██████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██  
+      ██▒▒██▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██      ██▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██
+        ████  ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒    ██▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██
+          ██    ▒▒██████▒▒▒▒▒▒▒▒▒▒▒▒▒▒    ██▒▒  ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██
+          ██            ████▒▒▒▒▒▒▒▒▒▒    ██  ▒▒  ▒▒        ▒▒▒▒▒▒▒▒▒▒▒▒██  
+            ██                      ██  ████  ▒▒          ▒▒▒▒▒▒▒▒▒▒▒▒▒▒██  
+              ██                      ██▒▒██              ▒▒  ▒▒▒▒▒▒▒▒▒▒██  
+                ██████████████████████▒▒▒▒██                    ▒▒▒▒▒▒██    
+                      ██▒▒      ██▒▒▒▒▒▒▒▒██                    ▒▒▒▒██      
+                      ██▒▒▒▒  ██▒▒▒▒▒▒▒▒████                  ▒▒▒▒██        
+                      ██▒▒▒▒▒▒██▒▒▒▒▒▒██  ██                    ██          
+                        ██████▒▒▒▒▒▒██    ██                ████            
+                              ██████      ██          ██████                
+                                            ██    ████                      
+                                            ██████   
     </pre>
     
     <script>
@@ -261,8 +296,36 @@
         "Prisionero 29: Brian Mitchell", "Culpable de: Robo en un almacén.",
         "Prisionero 30: Angela Roberts", "Culpable de: Uso indebido de fondos caritativos.",
         "Tipo II:",
-       "INFORMACIÓNENCRIPTADAXFGJELSDKSDKASDJLASD",
-        "Información No disponible",
+        "Prisionero 1: Ethan Reed", "Culpable de: Lavado de dinero a gran escala.",
+        "Prisionero 2: Sarah Hall", "Culpable de: Tráfico de personas.",
+        "Prisionero 3: Jacob Adams", "Culpable de: Manipulación de mercado.",
+        "Prisionero 4: Maria Clarke", "Culpable de: Conspiración para cometer fraude electoral.",
+        "Prisionero 5: William Turner", "Culpable de: Tráfico de armas.",
+        "Prisionero 6: Linda Johnson", "Culpable de: Corrupción política.",
+        "Prisionero 7: Anthony Harris", "Culpable de: Contrabando de bienes culturales.",
+        "Prisionero 8: Brenda Collins", "Culpable de: Espionaje corporativo.",
+        "Prisionero 9: Daniel Carter", "Culpable de: Homicidio involuntario.",
+        "Prisionero 10: Emily Lee", "Culpable de: Extorsión.",
+        "Prisionero 11: Michael Scott", "Culpable de: Secuestro.",
+        "Prisionero 12: Laura Reed", "Culpable de: Producción y distribución de pornografía infantil.",
+        "Prisionero 13: Robert King", "Culpable de: Falsificación de medicamentos.",
+        "Prisionero 14: Jessica Moore", "Culpable de: Fraude hipotecario.",
+        "Prisionero 15: Brian Wilson", "Culpable de: Operación de una red de apuestas ilegales.",
+        "Prisionero 16: Amanda Turner", "Culpable de: Tráfico de drogas a gran escala.",
+        "Prisionero 17: Charles Harris", "Culpable de: Crimen organizado.",
+        "Prisionero 18: Michelle Young", "Culpable de: Tráfico de órganos.",
+        "Prisionero 19: Kevin Miller", "Culpable de: Incendio premeditado.",
+        "Prisionero 20: Angela Taylor", "Culpable de: Desfalco.",
+        "Prisionero 21: Matthew Davis", "Culpable de: Fraude en inversiones.",
+        "Prisionero 22: Laura Johnson", "Culpable de: Conspiración para cometer homicidio.",
+        "Prisionero 23: Richard Brown", "Culpable de: Manipulación de pruebas.",
+        "Prisionero 24: Sarah Martinez", "Culpable de: Tráfico de fauna silvestre.",
+        "Prisionero 25: David White", "Culpable de: Terrorismo doméstico.",
+        "Prisionero 26: Jennifer Lewis", "Culpable de: Participación en una secta destructiva.",
+        "Prisionero 27: Steven Walker", "Culpable de: Blanqueo de capitales.",
+        "Prisionero 28: Patricia Harris", "Culpable de: Soborno a funcionarios públicos.",
+        "Prisionero 29: Paul Green", "Culpable de: Falsificación de documentos oficiales.",
+        "Prisionero 30: Elizabeth King", "Culpable de: Participación en un cartel de drogas.",
         "Tipo III:",
        "INFORMACIÓNENCRIPTADAXFGJELSDKSDKASDJLASD",
         "Información No disponible",
@@ -270,7 +333,20 @@
         "INFORMACIÓNENCRIPTADAFGJSDKSDKASDJLASD",
       "Información No disponible"
     ]
-}
+}    'Equipo FOX': {
+                title: 'FOXGROUP',
+                notes: ["FOX","Es un grupo formado ",
+
+"La Doctora Alicia Scott es una Neurocientifica y graduada con honores de la Academia de ciencias cuanticas y especializada en neurocuantica y psicólogia muy reconocida y la principal investigadora en el proyecto del FallNeura. Con una dedicación inquebrantable a su trabajo, ha logrado avances significativos en la comprensión de los procesos mentales y emocionales." ,
+
+"Diario Personal",
+"Fecha: 12 de marzo de 2022",
+"Hoy he vuelto a revisar los registros de los pacientes de Wester. Cada archivo, cada historia es una pieza de un rompecabezas más grande. No puedo evitar sentir una profunda conexión con ellos, especialmente con Nick. Su capacidad para navegar en el mundo del alma es fascinante y perturbadora a la vez. Cada día me pregunto si estamos haciendo lo correcto, si realmente estamos ayudando a estas personas o si simplemente estamos jugando a ser dioses.",
+"Fecha: 25 de abril de 2022",
+"Sarah es un apoyo inestimable. Su inteligencia y su moralidad la hacen única en un lugar como Neura. A veces, me pregunto cómo hemos llegado hasta aquí, en este lugar donde la ética es una moneda de cambio. Me reconforta saber que no estoy sola en esta lucha por descubrir la verdad y usar nuestros conocimientos para el bien.",
+"Fecha: 15 de junio de 2022",
+"Hoy, otro prisionero ha desaparecido. Los informes oficiales son vagos y contradictorios. La oscuridad que envuelve a la Prisión Wester se vuelve cada vez más densa. Tengo que mantenerme fuerte, por Nick, por Sarah, por todos los que no pueden luchar por sí mismos. La verdad debe salir a la luz, cueste lo que cueste."]
+            }
         };
 
 
