--- a/index.html
+++ b/index.html
@@ -333,20 +333,13 @@
         "INFORMACIÓNENCRIPTADAFGJSDKSDKASDJLASD",
       "Información No disponible"
     ]
-}    'Equipo FOX': {
+}    
+            'Equipo FOX': {
                 title: 'FOXGROUP',
-                notes: ["FOX","Es un grupo formado ",
+                notes: ["FOX","Es un grupo formado ", ]
 
-"La Doctora Alicia Scott es una Neurocientifica y graduada con honores de la Academia de ciencias cuanticas y especializada en neurocuantica y psicólogia muy reconocida y la principal investigadora en el proyecto del FallNeura. Con una dedicación inquebrantable a su trabajo, ha logrado avances significativos en la comprensión de los procesos mentales y emocionales." ,
-
-"Diario Personal",
-"Fecha: 12 de marzo de 2022",
-"Hoy he vuelto a revisar los registros de los pacientes de Wester. Cada archivo, cada historia es una pieza de un rompecabezas más grande. No puedo evitar sentir una profunda conexión con ellos, especialmente con Nick. Su capacidad para navegar en el mundo del alma es fascinante y perturbadora a la vez. Cada día me pregunto si estamos haciendo lo correcto, si realmente estamos ayudando a estas personas o si simplemente estamos jugando a ser dioses.",
-"Fecha: 25 de abril de 2022",
-"Sarah es un apoyo inestimable. Su inteligencia y su moralidad la hacen única en un lugar como Neura. A veces, me pregunto cómo hemos llegado hasta aquí, en este lugar donde la ética es una moneda de cambio. Me reconforta saber que no estoy sola en esta lucha por descubrir la verdad y usar nuestros conocimientos para el bien.",
-"Fecha: 15 de junio de 2022",
-"Hoy, otro prisionero ha desaparecido. Los informes oficiales son vagos y contradictorios. La oscuridad que envuelve a la Prisión Wester se vuelve cada vez más densa. Tengo que mantenerme fuerte, por Nick, por Sarah, por todos los que no pueden luchar por sí mismos. La verdad debe salir a la luz, cueste lo que cueste."]
-            }
+ }
+        
         };
 
 
