--- a/index.html
+++ b/index.html
@@ -307,7 +307,9 @@
 }    
             'Equipo FOX': {
                 title: 'FOXGROUP',
-                notes: ["FOX","Es un grupo formado ", ]
+                notes: ["FOX","Es un grupo formado "
+    
+        ]
 
  }
         
