--- a/index.html
+++ b/index.html
@@ -204,7 +204,6 @@
     title: 'Lista de pacientes',
     notes: [  
         "Nombre: Michael Green", "Condición: Esquizofrenia paranoide.", "Antecedentes: Fue diagnosticado a los 25 años. Sus síntomas empeoraron después de perder a su esposa en un accidente de coche.",
-        "Nombre: Laura Davis", "Condición: Trastorno de identidad disociativo.", "Antecedentes: Sobreviviente de abuso infantil severo. Desarrolló múltiples personalidades para lidiar con el trauma.",
         "Nombre: James Miller", "Condición: Esquizofrenia catatónica.", "Antecedentes: Antiguo profesor universitario, perdió su empleo y su familia debido a su enfermedad.",
         "Nombre: Sophia Taylor", "Condición: Depresión severa con alucinaciones.", "Antecedentes: Intento de suicidio a los 20 años, ha estado en tratamiento psiquiátrico desde entonces.",
         "Nombre: Ethan Brown", "Condición: Esquizofrenia hebefrénica.", "Antecedentes: Diagnosticado a los 17 años, ha tenido dificultades para mantener relaciones sociales y académicas.",
@@ -220,6 +219,7 @@
         "Nombre: Ava Hall", "Condición: Trastorno de pánico con síntomas psicóticos.", "Antecedentes: Sus ataques de pánico se intensificaron tras un accidente de tráfico grave.",
         "Nombre: Liam Young", "Condición: Esquizofrenia indiferenciada.", "Antecedentes: Ha sido hospitalizado varias veces debido a episodios agudos de psicosis.",
         "Nombre: Mia King", "Condición: Trastorno límite de la personalidad con episodios psicóticos.", "Antecedentes: Ha tenido relaciones interpersonales inestables y dificultades para mantener empleos.",
+        "Nombre: Laura Davis", "Condición: Trastorno de identidad disociativo.", "Antecedentes: Sobreviviente de abuso infantil severo. Desarrolló múltiples personalidades para lidiar con el trauma.",
         "Nombre: Benjamin Scott", "Condición: Esquizofrenia paranoide.", "Antecedentes: Sus síntomas han provocado varios enfrentamientos con la ley debido a comportamientos erráticos.",
         "Nombre: Chloe Adams", "Condición: Trastorno de depresión mayor con alucinaciones auditivas.", "Antecedentes: Ha intentado suicidarse varias veces y se ha automutilado.",
         "Nombre: Henry Baker", "Condición: Esquizofrenia desorganizada.", "Antecedentes: Ha estado institucionalizado durante la mayor parte de su vida adulta, incapaz de cuidar de sí mismo."
@@ -273,7 +273,7 @@
         "Prisionero 39: Daniel Carter", "Culpable de: Homicidio involuntario.",
         "Prisionero 40: Emily Lee", "Culpable de: Extorsión.",
         "Prisionero 41: Michael Scott", "Culpable de: Secuestro.",
-        "Prisionero 42: Laura Reed", "Culpable de: Producción y distribución de pornografía infantil.",
+        "Prisionero 42: Lee Reed", "Culpable de: Producción y distribución de pornografía infantil.",
         "Prisionero 43: Robert King", "Culpable de: Falsificación de medicamentos.",
         "Prisionero 44: Jessica Moore", "Culpable de: Fraude hipotecario.",
         "Prisionero 45: Brian Wilson", "Culpable de: Operación de una red de apuestas ilegales.",
