--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         "Prisionero 42: Lee Reed", "Culpable de: Producción y distribución de pornografía infantil.",
         "Prisionero 43: Robert King", "Culpable de: Falsificación de medicamentos.",
         "Prisionero 44: Jessica Moore", "Culpable de: Fraude hipotecario.",
-        "Prisionero 45: Brian Wilson", "Culpable de: Operación de una red de apuestas ilegales.",
+        "Prisionero 45: Neel Wilson", "Culpable de: Operación de una red de apuestas ilegales.",
         "Prisionero 46: Amanda Turner", "Culpable de: Tráfico de drogas a gran escala.",
         "Prisionero 47: Charles Harris", "Culpable de: Crimen organizado.",
         "Prisionero 48: Michelle Young", "Culpable de: Tráfico de órganos.",
@@ -300,6 +300,10 @@
       "Información No disponible"
     ]
 },     
+             'Hackeo': {
+                title: 'Hackers Panda',
+                notes: ["Camaras de la biblioteca: 16 - 13 - 14 - 16 - 15 - 14 ","Camaras de Water: 11-30-34-10-59-4-45", "Camaras de Neural: 15-16-50-24-86-48", "Camaras de Laboratorio A1: 15-65-35-48-48-45-46-13"]
+            },
             
 'FOX': {
     title: 'Grupo Secreto FOX',
