--- a/index.html
+++ b/index.html
@@ -302,7 +302,13 @@
 },     
              'Hackeo': {
                 title: 'Hackers Panda',
-                notes: ["Camaras de la biblioteca: 16 - 13 - 14 - 16 - 15 - 14 ","Camaras de Water: 11-30-34-10-59-4-45", "Camaras de Neural: 15-16-50-24-86-48", "Camaras de Laboratorio A1: 15-65-35-48-48-45-46-13"]
+                notes: ["Camaras de la biblioteca: 16 - 13 - 14 - 16 - 15 - 14 ",
+                        "Camaras de Water: 11-30-34-10-59-4-45", 
+                        "Camaras de Neural: 15-16-50-24-86-48", 
+                        "Camaras de Laboratorio A1: 15-65-35-48-48-45-46-13",
+                        "Camaras del Hospital Neur: 1 - 8 - 9 - 0 - 7 - 12",
+                        "Códigos Secretos"
+                       ]
             },
             
 'FOX': {
