--- a/index.html
+++ b/index.html
@@ -310,6 +310,11 @@
                         "Códigos Secretos"
                        ]
             },
+
+            'Conexion LYR': {
+                title: 'Conexión LYR',
+                notes: ["Palabras a descifrar","CXOED","EWTERS","UENETP RYL","CNEXOINO XTSAEIO"]          
+            },
             
 'FOX': {
     title: 'Grupo Secreto FOX',
